Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/ErasureClashCrash.out
ErasureClashCrash.java:14:16: compiler.err.name.clash.same.erasure.no.override: compareTo, java.lang.Object, ErasureClashCrash, compareTo, ErasureClashCrash, Compar
1 error
